--- a/less/reset.less
+++ b/less/reset.less
@@ -50,3 +50,20 @@ input, button {
 	padding: 0;
 	margin: 0;
 }
+
+
+
+html {
+	box-sizing: border-box;
+	font-size: 62.5%;
+}
+
+*, *:before, *:after {
+	box-sizing: inherit;
+}
+
+// body {
+//     // STOP MOVING AROUND!
+//     overflow-x: hidden;
+//     overflow-y: scroll !important;
+// }
